--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,4 @@
-# Project Office Methodology 3.0
-python>=3.8
-
-# Core
-pandas>=1.5.0
-numpy>=1.23.0
-scikit-learn>=1.2.0
-
-# Web & Dashboard
-streamlit>=1.20.0
-fastapi>=0.95.0
-
-# Visualization
-matplotlib>=3.6.0
-plotly>=5.13.0
-
-# Tools
-pyyaml>=6.0
-python-docx>=0.8.0
+﻿streamlit>=1.28.0
+pandas>=2.0.0
+numpy>=1.24.0
+plotly>=5.17.0
